# spanner-orm-app

./: 00-Prepare-apis.sh  02-Create-table.sh  03-Deploy.sh  Create-instance-and-db.sh  Procfile  README.md  db.py  deploy.sh  main.py  pyproject.toml  requirements.txt
