[tool.poetry]
name = "spanner-orm-app"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-spanner = "^3.18.0"
sqlalchemy-spanner = "^1.2.1"
click = "^8.1.3"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
